--- a/angular.json
+++ b/angular.json
@@ -98,9 +98,21 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+                "src/**/*.component.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "my-youtube-client"
+  "defaultProject": "my-youtube-client",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
